# hypercolator

./: .replit  PLAN.md  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
attached_assets/: Pasted-Project-Name-Hypercolator-Goal-Build-a-decentralized-pe_1776270795947.txt
docs/: percolator-architecture.md
hypercolator/: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md
hypercolator/crates/percolator/: Cargo.toml
hypercolator/crates/percolator/src/: lib.rs  percolator.rs  wide_math.rs
hypercolator/programs/hypercolator/: Cargo.toml
hypercolator/programs/hypercolator/src/: errors.rs  lib.rs  price_engine.rs  state.rs
hypercolator/programs/hypercolator/tests/: create_market.rs
hypercolator/scripts/: build.sh  fmt.sh  setup.sh  verify.sh
hypercolator/tests/: create_market.ts
scripts/github/: BOOTSTRAP_VERIFICATION.txt  README.md  package.json
scripts/github/src/: auth.ts  fork.ts  issues.ts  logger.ts  run.ts  verify-pages.ts
